<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.fragments.EditDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivAddPhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/flower_image_description"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@drawable/ic_garden_center_15" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_view_margin_start_end"
            android:layout_marginEnd="@dimen/form_view_margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_view_margin_start_end"
            android:layout_marginEnd="@dimen/form_view_margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="280dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_view_margin_start_end"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/form_view_margin_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lDescription">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSun"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:tag="sun"
                android:text="Słońce" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipShadow"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="shadow"
                android:text="Cień" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRichIrrigation"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="rich irrigation"
                android:text="Obfite nawodnienie" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOnStand"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="on stand"
                android:text="Na podstawke" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSprinkle"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:tag="sprinkle"
                android:text="Zraszać" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvNotification"
            style="@style/Card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cgTags">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <Switch
                    android:id="@+id/turnNotificationSwitch"
                    android:layout_width="379dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="@dimen/form_view_margin_start_end"
                    android:layout_marginEnd="@dimen/form_view_margin_start_end"
                    android:paddingStart="4dp"
                    android:text="@string/edit_notification_label"
                    android:textColor="@color/edit_text_color"
                    android:textSize="@dimen/descriptionTextSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/frequencySpinner"
                    style="@style/LabelTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/form_view_margin_start_end"
                    android:layout_marginEnd="@dimen/form_view_margin_start_end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/turnNotificationSwitch" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>