<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navList"
            android:icon="@drawable/ic_list"
            android:title="@string/all_flowers_title"
            android:visible="false" />
        <item
            android:id="@+id/navMyList"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/user_flowers_title"/>
        <item
            android:id="@+id/navAddNew"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_new_flower"/>
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"/>
    </group>

    <!--<item android:title="Społeczność">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Udostępnij"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Wyślij"/>-->
    <!--</menu>-->
    <!--</item>-->

</menu>
